# radiotrav

./: README.md  pyproject.toml
docs/dashboard/: index.html
report/: dashboard.html  event_viewer.html  report.html  sequence_report.html
src/radiotrap/: cluster.py  io.py  main.py  render.py  segmentation.py  sequences.py
src/radiotrav/: cluster.py  io.py  main.py  overlay.py  render.py  segmentation.py
tests/: test_all_features.py  test_load_cluster_ids.py  test_render_fade.py  test_t3pa_loading.py
