[project]
name = "radiotrav"
version = "0.1.0"
description = "Time Resolved Autoradiography Visualization for Nuclear Radiation"
authors = [{name="Your Name"}]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "imageio[tifffile]",
    "imageio[ffmpeg]",
    "click",
    "matplotlib",
    "tqdm",
    "scipy",
    "networkx",
    "opencv-python-headless",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.uv]
package = true

[project.scripts]
radiotrav = "radiotrav.main:cli"
